<resources>
    <string name="app_name">AgeCalculator</string>
    <string name="primary_cal_text">CALCULATE YOUR</string>
    <string name="age_button">AGE</string>
    <string name="secondary_cal_text">IN MINUTES</string>
    <string name="select_date_button">SELECT DATE</string>
    <string name="sub_text_date">Selected Date</string>
    <string name="sub_text_minutes">In minutes till date</string>
</resources>